// Copyright 2018 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";
import "token.proto";

package tokengrpc;

// A simple key-value storage service
service Token {
  // Provides a value for each key request
  rpc Partial_Polynomial_interpolation (token.Token) returns (Value) {}
  rpc Get_tokens(Node_id) returns (List_tokens) {} //Node_id is destination id
}

// The response message containing the value associated with the key
message Value{
  string value = 1;
}

message Node_id {
  int32 id = 1;
}

message List_tokens {
  repeated token.Token tokens = 1;
}
