// Copyright 2018 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package keyvaluestore;

// A simple key-value storage service
service KVS {
  // Provides a value for each key request
  rpc Get (Key) returns (Value) {}
  rpc Put (KV_pair) returns (Value) {}
}

// The request message containing the key
message Key {
  string key = 1;
}

// The response message containing the value associated with the key
message Value{
  string value = 1;
}

message KV_pair{
  string key = 1;
  string value = 2;
}

